--- a/src/components/NavSocial.astro
+++ b/src/components/NavSocial.astro
@@ -1,7 +1,7 @@
 ---
-import Facebook from '@/icons/facebook.astro';
-import Instagram from './icons/instagram.astro';
-import TikTok from './icons/tiktok.astro';
+import Facebook from '@/components/icons/facebook.astro';
+import Instagram from '@/components/icons/instagram.astro';
+import TikTok from '@/components/icons/tiktok.astro';
 ---
 
 <ul>
