--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -1,5 +1,6 @@
 ---
 import Analytics from '@/components/Analytics.astro';
+import { Font } from 'astro:assets';
 
 export interface Props {
   title: string;
@@ -21,6 +22,9 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 <link rel="preconnect" href="https://www.googletagmanager.com" />
 <link rel="dns-prefetch" href="https://www.google-analytics.com" />
 
+<Font cssVariable="--font-playfair" preload />
+<Font cssVariable="--font-nunito-sans" preload />
+
 <!-- Web analytics -->
 <Analytics />
 
@@ -39,5 +43,5 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 <meta name="twitter:image" content="/og-imge.png" />
 
 <!-- Theme color for mobile browsers -->
-<meta name="theme-color" content="#d97706" />
+<meta name="theme-color" content="#A87C2D" />
 <meta name="apple-mobile-web-app-status-bar-style" content="default" />
