--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -33,14 +33,16 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 <meta property="og:type" content="website" />
 <meta property="og:url" content={canonicalURL} />
 <meta property="og:description" content={description} />
-<meta property="og:image" content="/og-imge.png" />
+<meta property="og:image" content={`${Astro.site}og-image.png`} />
 <meta property="og:image:alt" content={description} />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
 
 <!-- Twitter Card -->
-<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:card" content="summary_large_img" />
 <meta name="twitter:title" content={title} />
 <meta name="twitter:description" content={description} />
-<meta name="twitter:image" content="/og-imge.png" />
+<meta name="twitter:image" content={`${Astro.site}og-img.png`} />
 
 <!-- Theme color for mobile browsers -->
 <meta name="theme-color" content="#A87C2D" />
