--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,9 +20,9 @@ const { title, description } = Astro.props;
   <head>
     <Head title={title} description={description} />
   </head>
-  <body class="min-h-screen flex flex-col">
+  <body class="bg-almost-black-gray text-ivory-sand font-nunito-sans">
     <Header />
-    <main class="flex-1">
+    <main>
       <slot />
     </main>
     <Footer />
