--- a/src/components/NavSocial.astro
+++ b/src/components/NavSocial.astro
@@ -4,14 +4,35 @@ import Instagram from '@/components/icons/instagram.astro';
 import TikTok from '@/components/icons/tiktok.astro';
 ---
 
-<ul>
+<ul class="flex gap-5">
   <li>
-    <a href="" target="_blank" rel="noopener"> <Facebook /></a>
+    <a
+      class="hover:text-warm-gold transition-colors"
+      href="https://www.facebook.com/zocorestaurant/"
+      target="_blank"
+      rel="noopener"
+    >
+      <Facebook />
+    </a>
   </li>
   <li>
-    <a href="" target="_blank" rel="noopener"> <Instagram /> </a>
+    <a
+      class="hover:text-warm-gold transition-colors"
+      href="https://instagram.com/zocorestaurant"
+      target="_blank"
+      rel="noopener"
+    >
+      <Instagram />
+    </a>
   </li>
   <li>
-    <a href="" target="_blank" rel="noopener"> <TikTok /> </a>
+    <a
+      class="hover:text-warm-gold transition-colors"
+      href="https://www.tiktok.com/@zoco.tenerife"
+      target="_blank"
+      rel="noopener"
+    >
+      <TikTok />
+    </a>
   </li>
 </ul>
