--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,12 +1,35 @@
 ---
+import Hamburger from '@/components/icons/hamburger.astro';
 import LanguagePicker from '@/components/LanguagePicker.astro';
+import MainMenu from '@/components/MainMenu.astro';
 ---
 
-<header class="bg-amber-900 text-amber-100 p-4">
-  <nav class="container mx-auto flex justify-between items-center">
-    <div>
-      <h1 class="text-2xl font-bold text-amber-300">Zoco Restaurant</h1>
-    </div>
+<header
+  class="bg-almost-black-gray/60 sticky top-0 z-10 px-4 pt-6 pb-4 backdrop-blur-md"
+>
+  <nav class="container mx-auto flex items-center justify-between">
+    <Hamburger />
     <LanguagePicker />
   </nav>
+  <MainMenu />
 </header>
+
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    const menuToggle = document.querySelector('.menu');
+    const mainMenu = document.querySelector('aside') as HTMLElement;
+
+    menuToggle?.addEventListener('click', function () {
+      const isOpen = menuToggle.classList.contains('open');
+      menuToggle.classList.toggle('open');
+
+      if (mainMenu) {
+        if (isOpen) {
+          mainMenu.style.display = 'none';
+        } else {
+          mainMenu.style.display = 'block';
+        }
+      }
+    });
+  });
+</script>
